--- a/customer-app/app.json
+++ b/customer-app/app.json
@@ -78,6 +78,14 @@
             "extraProguardRules": "-keep class **.zego.** { *; }"
           }
         }
+      ],
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "Allow $(PRODUCT_NAME) to access your photos.",
+          "savePhotosPermission": "Allow $(PRODUCT_NAME) to save photos.",
+          "isAccessMediaLocationEnabled": true
+        }
       ]
     ]
   }
