--- a/customer-app/package.json
+++ b/customer-app/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/amiri": "^0.4.1",
+    "@expo-google-fonts/cairo": "^0.4.2",
+    "@expo-google-fonts/rubik": "^0.4.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.12.0",
@@ -24,6 +27,7 @@
     "expo-dev-client": "~6.0.20",
     "expo-device": "^8.0.10",
     "expo-file-system": "~19.0.21",
+    "expo-font": "~14.0.11",
     "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-local-authentication": "~17.0.8",
