--- a/customer-app/app.json
+++ b/customer-app/app.json
@@ -21,7 +21,8 @@
         "ZPNsAppDelegateProxyEnabled": false,
         "ZPNsProxyEnabled": false,
         "NSCameraUsageDescription": "This app needs camera access to take photos and record videos.",
-        "NSMicrophoneUsageDescription": "This app needs microphone access to record videos."
+        "NSMicrophoneUsageDescription": "This app needs microphone access to record videos.",
+        "NSLocationWhenInUseUsageDescription": "This app needs location access to track your delivery in real-time."
       }
     },
     "android": {
@@ -97,7 +98,13 @@
           "isAccessMediaLocationEnabled": true
         }
       ],
-      "expo-font"
+      "expo-font",
+      [
+        "expo-location",
+        {
+          "locationWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location for real-time delivery tracking."
+        }
+      ]
     ]
   }
 }
