--- a/customer-app/package.json
+++ b/customer-app/package.json
@@ -31,8 +31,11 @@
     "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-local-authentication": "~17.0.8",
+    "expo-location": "~19.0.8",
     "expo-media-library": "~18.2.1",
-    "expo-notifications": "^0.32.16",
+    "expo-notifications": "~0.32.16",
+    "expo-print": "~15.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "^6.0.9",
     "expo-updates": "~29.0.16",
@@ -43,6 +46,7 @@
     "react-native": "0.81.5",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
     "react-native-qrcode-svg": "^6.3.21",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
