--- a/customer-app/package.json
+++ b/customer-app/package.json
@@ -19,7 +19,7 @@
     "@zegocloud/zego-uikit-rn": "^2.19.1",
     "@zegocloud/zego-uikit-signaling-plugin-rn": "^1.3.8",
     "expo": "~54.0.33",
-    "expo-av": "~16.0.8",
+    "expo-audio": "~1.1.1",
     "expo-blur": "~15.0.8",
     "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.10",
@@ -40,6 +40,7 @@
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "^6.0.9",
     "expo-updates": "~29.0.16",
+    "expo-video": "~3.0.16",
     "firebase": "^12.8.0",
     "lucide-react-native": "^0.563.0",
     "react": "19.1.0",
