feat: implement in-app map for driver shipment tracking including ETA and current location, and redact receiver phone numbers for available deliveries.

--- a/customer-app/app.json
+++ b/customer-app/app.json
@@ -114,6 +114,10 @@
             "image": "./assets/expo-icons/splash-icon.png",
             "backgroundColor": "#010100"
           },
+          "light": {
+            "image": "./assets/expo-icons/splash-icon.png",
+            "backgroundColor": "#010100"
+          },
           "imageWidth": 200
         }
       ],
