--- a/customer-app/package.json
+++ b/customer-app/package.json
@@ -18,6 +18,7 @@
     "@zegocloud/zego-uikit-prebuilt-live-streaming-rn": "^2.8.3",
     "@zegocloud/zego-uikit-rn": "^2.19.1",
     "@zegocloud/zego-uikit-signaling-plugin-rn": "^1.3.8",
+    "bna-ui": "^2.0.4",
     "expo": "~54.0.33",
     "expo-audio": "~1.1.1",
     "expo-blur": "~15.0.8",
@@ -28,6 +29,7 @@
     "expo-device": "^8.0.10",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.11",
+    "expo-haptics": "^15.0.8",
     "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-local-authentication": "~17.0.8",
@@ -35,6 +37,7 @@
     "expo-media-library": "~18.2.1",
     "expo-notifications": "~0.32.16",
     "expo-print": "~15.0.8",
+    "expo-router": "^6.0.23",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
